Responsive overflow fixes

--- a/src/styles/layout/_contact.scss
+++ b/src/styles/layout/_contact.scss
@@ -32,6 +32,10 @@
       width: 80%;
       margin: 0 auto;
     }
+
+    @include respond(phone) {
+      margin-bottom: 8rem;
+    }
   }
 
   &__group:not(:last-child) {
